public/css/lorekeeper.css
/* ... */
div.selectize-input {
    padding-right: 24px;
}

/* Can't do this without killing ability to search dd's */
/* div.selectize-input input {
    display: none !important;
} */

div.form-control.selectize-control {
    margin-bottom: -8px;
}

.selectize-dropdown .optgroup .option {
    padding-left: 20px;
}

.selectize-dropdown .optgroup .optgroup-header {
    background: rgb(242, 242, 242);
}

div.selectize-dropdown .optgroup::before {
    display: none;
}

/**************************************************************************************************

    Font-Awesome Overrides

**************************************************************************************************/

.fas.fa-times {
    margin-left: 2px;
    margin-top: 6px;
}

/**************************************************************************************************

    Bootstrap Overrides

**************************************************************************************************/

label {
    margin-bottom: 2px !important;
}

.btn a,
.btn a:hover {
    color: unset;
}

.toggle-group .btn {
    display: flex;
    justify-content: center;
    align-items: center;
}

div.toggle.btn {
    min-width: 125px;
    max-width: 100%;
}

[data-toggle="collapse"] i::before {
    display: block;
    transition: 0.5s ease;
}

[data-toggle="collapse"][aria-expanded="true"] i::before {
    transform: rotate(-90deg);
}

.bg-danger {
    background-color: var(--red) !important;
    filter: brightness(100%) !important;
    color: var(--coal) !important;
}

.btn {
    padding: 3px 10px;
    border-radius: 2px;
    letter-spacing: 0.2ch;
}

.btn.btn-primary {
    background-color: var(--coal);
    border: 3px solid var(--coal);
}

.badge {
    vertical-align: text-top;
}

.badge-primary {
    background-color: var(--coal);
}

.badge-primary[href]:focus,
.badge-primary[href]:hover {
    background-color: var(--coal) !important;
    filter: brightness(150%) !important;

    cursor: pointer;
}

.badge-success {
    background-color: var(--green);
}

.badge-danger {
    background-color: var(--dark-red);
}

.badge-lg {
    font-size: 10px;
}

.alert-warning {
    background-color: var(--white-purple);
    color: var(--dark-purple);
    border-color: var(--purple);
}

.alert-danger {
    background-color: var(--red);
}

.btn.btn-danger {
    background-color: var(--dark-red);
    border: 3px double var(--dark-red);
}

.btn.btn-success {
    background-color: var(--green);
    border-color: var(--green);
}

.btn.btn-outline-success {
    color: var(--green);
    border-color: var(--green);
}

.btn.btn-outline-success:hover {
    background-color: var(--green);
    color: var(--white);
    border-color: var(--green);
}

.btn.btn-outline-primary,
.btn.btn-outline-info {
    color: var(--coal);
    border-color: var(--coal);
}

.btn.btn-outline-primary:hover,
.btn.btn-outline-info:hover {
    background-color: var(--coal);
    color: var(--white);
    border-color: var(--coal);
}

.dropdown-menu {
    border-radius: 0;
    border: none;
    background-color: var(--coal);
}

.dropdown-menu .dropdown-item {
    color: var(--light-purple);
}

.dropdown-menu .dropdown-item:hover {
    background-color: var(--coal);
    color: var(--purple);
}

.d-flex {
    align-items: flex-start;
}

/**************************************************************************************************

    Base styles

**************************************************************************************************/

h1,
h2,
h3,
h4,
h5,
.h1,
.h2,
.h3,
.h4,
.h5 {
    text-transform: uppercase;
    font-family: neue-haas-grotesk-display, sans-serif;
    font-weight: 700;
    letter-spacing: 0.08ch;
    text-rendering: geometricPrecision;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
a.h1,
a.h2,
a.h3,
a.h4,
a.h5 {
    color: rgba(0, 0, 0, 0.7);
}
h1 a:hover,
h2 a:hover,
h3 a:hover,
h4 a:hover,
h5 a:hover,
a.h1:hover,
a.h2:hover,
a.h3:hover,
a.h4:hover,
a.h5:hover {
    color: inherit;
    text-decoration: none;
}

.parsed-text a,
#tinymce a {
    color: var(--blue);
}

.parsed-text a:hover,
#tinymce a:hover {
    color: var(--blue);
    filter: brightness(80%);
}

a {
    color: rgba(0, 0, 0, 0.7);
}
a:hover {
    color: rgba(0, 0, 0, 1);
    text-decoration: none;
}

html.app {
    background-color: var(--coal);
}

body {
    background-color: transparent;
    font-family: neue-haas-grotesk-text, sans-serif;
    min-height: 100vh;
    font-size: 80%;
    text-rendering: geometricPrecision;
}

img {
    image-rendering: -moz-crisp-edges; /* Firefox */
    image-rendering: -o-crisp-edges; /* Opera */
    image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
    image-rendering: crisp-edges;
    -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
}

table thead {
    background-color: var(--coal);
    color: var(--white);
    text-transform: uppercase;
    font-family: "neue-haas-grotesk-display";
}

table td,
table thead th,
.table-sm td,
.table-sm th {
    border: 1px solid var(--coal) !important;
    padding: 8px;
}

/**************************************************************************************************

    Helpers

**************************************************************************************************/

.hide {
    display: none !important;
}

.parsed-text img {
    max-width: 100% !important;
    height: auto !important;
}

/**************************************************************************************************

    Layout

**************************************************************************************************/

#app {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: var(--coal);
}

main {
    flex-grow: 1;
    display: flex;
}

main > .row {
    flex-grow: 1;
}
/* ... */

